Added sort exercises and finished 2degree equation exercise

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <button onclick="pressButton('maxVal')">max</button>
         <button onclick="pressButton('showString')">showStr</button>
         <button onclick="pressButton('reverseString')">revStr</button>
+        <button onclick="pressButton('løs2grads')">løs2grads</button>
+        <button onclick="pressButton('sortByLength')">sortLength</button>
+        <button onclick="pressButton('sortByAlphabet')">sortAlpha</button>
         
         <h1>Tests</h1>
         <button onclick="testButton('add')">Test: +</button>
@@ -33,6 +36,9 @@
         <button onclick="testButton('maxVal')">Test: max</button>
         <button onclick="testButton('showString')">Test: showStr</button>
         <button onclick="testButton('reverseString')">Test: revStr</button>
+        <button onclick="testButton('løs2grads')">Test: løs2grads</button>
+        <button onclick="testButton('sortByLength')">Test: sortLength</button>
+        <button onclick="testButton('sortByAlphabet')">Test: sortAlpha</button>
         
         <h2 id="result">Result will be here</h2>
         <p id="testOutput"></p>
