--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <div id="Lommeregner">
@@ -15,7 +13,9 @@
         <input id="inputB"/>
         <label>Det trejde input. (c)</label>
         <input id="inputC"/><br>
+        <div id="actionButtons"></div>
         <h1>Funktioner</h1>
+
         <button onclick="pressButton('add')">+</button>
         <button onclick="pressButton('subtract')">-</button>
         <button onclick="pressButton('multiply')">*</button>
@@ -50,7 +50,7 @@
         <h2 id="result">Result will be here</h2>
         <p id="testOutput"></p>
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <script src="unitTests.js"></script>
     
 </body>
